--- a/manifest/deployment.yaml
+++ b/manifest/deployment.yaml
@@ -15,5 +15,5 @@ spec:
         app: go-server-ci
     spec:
       containers:
-      - image: 4407-go-server-ci:c4053d8fb00339d37c81fd10a2c48e1dc2cc86a6
+      - image: ghcr.io/2023-4400-exp/4407-go-server-ci:c4053d8fb00339d37c81fd10a2c48e1dc2cc86a6
         name: go-server-ci
